I18N e lista piani terapeutici

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -75,5 +75,13 @@
   "PREZZO": "Price",
   "PRODUTTORE": "Producer",
   "FORMATO": "Size",
-  "MODALITA_PRESCRIZIONE" : "Prescription Mode"
+  "MODALITA_PRESCRIZIONE" : "Prescription Mode",
+
+  "LISTA_PIANI_TAB" : "My therapeutic plans",
+  "DATA_INIZIO": "From:",
+  "DATA_FINE" : "To:",
+
+  "ARMADIETTO_TAB" : "My box",
+  "FORMATO": "Format",
+  "QUANTITA" : "Available quantity"
 }
