--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -77,5 +77,13 @@
   "PREZZO": "Prezzo",
   "PRODUTTORE": "Produttore",
   "FORMATO": "Formato",
-  "MODALITA_PRESCRIZIONE" : "Modalità di prescrizione"
+  "MODALITA_PRESCRIZIONE" : "Modalità di prescrizione",
+
+  "LISTA_PIANI_TAB" : "I miei piani Terapeutici",
+  "DATA_INIZIO": "Dal:",
+  "DATA_FINE" : "Al:",
+
+  "ARMADIETTO_TAB" : "Il mio armadietto",
+  "FORMATO": "Formato",
+  "QUANTITA" : "Quantità rimaste"
 }
