fix dettaglio farmaco

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -83,5 +83,8 @@
 
   "ARMADIETTO_TAB" : "My box",
   "FORMATO": "Format",
-  "QUANTITA" : "Available quantity"
+  "QUANTITA" : "Available quantity",
+
+
+  "NUOVO_PIANO_TAB" : "Nuovo piano Terapeutico"
 }
