--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -87,5 +87,10 @@
   "FORMATO": "Formato",
   "QUANTITA" : "Quantità rimaste",
 
-  "NUOVO_PIANO_TAB" : "Nuovo piano Terapeutico"
+  "NUOVO_PIANO_TAB" : "Nuovo piano Terapeutico",
+  "NOME_PIANO" : "Nome Piano",
+  "NOME_PIANO_STRING" : "Inserisci il nome del piano",
+  "DATA_INIZIO_PIANO" : "Data inizio",
+  "DATA_FINE_PIANO" : "Data fine",
+  "DESCRIZIONE_PIANO" : "Descrizione"
 }
