--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -80,8 +80,8 @@
   "MODALITA_PRESCRIZIONE" : "Modalità di prescrizione",
 
   "LISTA_PIANI_TAB" : "I miei piani Terapeutici",
-  "DATA_INIZIO": "Dal:",
-  "DATA_FINE" : "Al:",
+  "DATA_INIZIO": "Dal",
+  "DATA_FINE" : "Al",
 
   "ARMADIETTO_TAB" : "Il mio armadietto",
   "FORMATO": "Formato",
