--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -98,5 +98,9 @@
   "IMPOSTAZIONI_TAB" : "Impostazioni",
   "LINGUA_SETTING" : "Lingua",
   "ENG" : "Inglese",
-  "ITA" : "Italiano"
+  "ITA" : "Italiano",
+
+  "CERCA_MEDICINA" : "Cerca medicina",
+  "FORMATI_DISPONIBILI" : "Uno o più formati disponibili"
+
 }
