Rimozione piano[Client/Server]

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -93,6 +93,7 @@
   "DATA_FINE_PIANO" : "End Date",
   "DESCRIZIONE_PIANO" : "Description",
   "DESCRIZIONE_PIANO_STRING" : "Insert here other informations  ...",
+  "MODIFY_BUTTON" : "MODIFY",
 
   "IMPOSTAZIONI_TAB" : "Settings",
   "LINGUA_SETTING" : "Language",
