--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -94,6 +94,7 @@
   "DATA_FINE_PIANO" : "Data fine",
   "DESCRIZIONE_PIANO" : "Descrizione",
   "DESCRIZIONE_PIANO_STRING" : "Inserisci altre informazioni qui ...",
+  "MODIFY_BUTTON" : "MODIFICA",
 
   "IMPOSTAZIONI_TAB" : "Impostazioni",
   "LINGUA_SETTING" : "Lingua",
