Aggiunta/Rimozione farmaco piano [Client/Server]

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -113,6 +113,7 @@
   "DETTAGLI_AGGIUNTA_TAB" : "Assumption details",
   "QUANTITA_ASSUNZIONE" : "Quantity",
   "ORARIO_ASSUNZIONE" : "Time",
+  "GIORNO_ASSUNZIONE" : "Day/s",
 
   "SCEGLI_FORMATO" :  "Choose Format",
   "SELEZIONA_QUANTITA" : "Select Quantity"
