--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -114,6 +114,7 @@
   "DETTAGLI_AGGIUNTA_TAB" : "Dettagli assunzione",
   "QUANTITA_ASSUNZIONE" : "Quantità",
   "ORARIO_ASSUNZIONE" : "Orario",
+  "GIORNO_ASSUNZIONE" : "Giorno/i",
 
   "SCEGLI_FORMATO" :  "Scegli formato",
   "SELEZIONA_QUANTITA" : "Seleziona quantità"
