aggiunto header stile IOS e testo sotto la navbar

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -78,7 +78,7 @@
   "FORMATO": "Size",
   "MODALITA_PRESCRIZIONE" : "Prescription Mode",
 
-  "LISTA_PIANI_TAB" : "My therapeutic plans",
+  "LISTA_PIANI_TAB" : "My Plans",
   "DATA_INIZIO": "From",
   "DATA_FINE" : "To",
 
