--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -80,7 +80,7 @@
   "FORMATO": "Formato",
   "MODALITA_PRESCRIZIONE" : "Modalità di prescrizione",
 
-  "LISTA_PIANI_TAB" : "I miei piani Terapeutici",
+  "LISTA_PIANI_TAB" : "I miei Piani",
   "DATA_INIZIO": "Dal",
   "DATA_FINE" : "Al",
 
