dett piano refactor

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -87,7 +87,7 @@
   "QUANTITA" : "Available quantity",
 
 
-  "NUOVO_PIANO_TAB" : "New therapeutic plan",
+  "NUOVO_PIANO_TAB" : "New plan",
   "NOME_PIANO" : "Plan's name",
   "NOME_PIANO_STRING" : "Inserte here the plan's name",
   "DATA_INIZIO_PIANO" : "Start Date",
