--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -125,6 +125,9 @@
   "TAB_1" : "Armadietto",
   "TAB_2" : "Piani",
   "TAB_3" : "Home",
-  "TAB_4" : "Impostazioni"
+  "TAB_4" : "Impostazioni",
+
+  "DETTAGLIO_PIANO_SUB_LEFT" : "Dettagli",
+  "DETTAGLIO_PIANO_SUB_RIGHT" : "Medicine"
 
 }
