non hai medicinali nel piano I18N

--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -134,5 +134,7 @@
   "FORMATO" : "Format",
   "ORARIO" : "Schedule",
   "QUANTITA" : "Quantity",
-  "GIORNO" : "Day"
+  "GIORNO" : "Day",
+
+  "NO_MED_PIANO" : "No medicines in the plan ... add one"
 }
