--- a/Ionic - DailyPills/myApp/src/assets/i18n/en.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/en.json
@@ -136,5 +136,9 @@
   "QUANTITA" : "Quantity",
   "GIORNO" : "Day",
 
-  "NO_MED_PIANO" : "No medicines in the plan ... add one"
+  "NO_MED_PIANO" : "No medicines in the plan ... Add one!",
+  "NO_MED_OGGI" : "Today you don't have to take any medication!",
+  "NO_PIANI" : "You have no treatment plans ... Add one!",
+  "NO_MED_ARMADIETTO" : "You have no medicines in your box ... Add one!",
+  "NO_MED_ARMADIETTO_SCEGLI_FARMACO" : "You can not add medicines because your box is empty!"
 }
