--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -9,6 +9,7 @@
   "UPDATE_BUTTON": "Modifica",
   "ADD_BUTTON" : "Aggiungi",
   "EDIT_BUTTON" : "Modifica",
+  "OK_BTN" : "OK",
 
   "LOGIN_TITLE": "Login",
   "LOGIN_ERROR_TITLE": "Errore Login",
@@ -145,5 +146,28 @@
   "NO_MED_ARMADIETTO_SCEGLI_FARMACO" : "Non hai medicine da aggiungere al piano perchè il tuo armadietto è vuoto!",
 
   "Inglese" : "Inglese",
-  "Italiano" : "Italiano"
+  "Italiano" : "Italiano",
+
+  "ERRORE_INSERIMENTO" : "Errore inserimento",
+  "MSG_ERRORE_INSERIMENTO" : "Il formato scelto è stato inserito nel tuo armadietto",
+  "FARMACO_INSERITO" : "Farmaco Inserito",
+  "MSG_FARMACO_INSERITO" : "Il formato scelto è stato inserito nel tuo armadietto",
+
+  "ELIMINA_FARMACO_ARMADIETTO" : "Elimina Farmaco",
+  "MSG_ELIMINA_FARMACO_ARMADIETTO" : "Sei sicuro di voler eliminare",
+  "CONFIRMATION_BUTTON" : "Conferma",
+
+  "MODIFICA_PIANO" : "Modifica Piano",
+  "MAG_MODIFICA_PIANO " : "Sei sicuro di voler modificare il piano",
+
+  "MSG_ERRORE_CREAZIONE_PIANO" : "Errore creazione piano",
+
+  "CONFERMA_ASSUNZIONE" : "Conferma Assunzione",
+  "MSG_CONFERMA_ASSUNZIONE" : "Sei sicuro di voler confermare l'assunzione?",
+
+  "ERRORE_CONFERMA_ASSUNZIONE" : "Errore conferma assunzione",
+
+  "ELIMINA_PIANO" : "Elimina Piano",
+  "MSG_ELIMINA_PIANO" : "Sei sicuro di voler eliminare il piano"
+
 }
