Last update [All Done]

--- a/Ionic - DailyPills/myApp/src/assets/i18n/it.json
+++ b/Ionic - DailyPills/myApp/src/assets/i18n/it.json
@@ -24,7 +24,7 @@
   "LOGIN_ERROR_SUB_TITLE": "Username e/o password errate!",
   "LOGIN_USER_STRING": "Inserisci il tuo Username",
   "LOGIN_PASSWORD_STRING": "Inserisci la tua Password",
-  "REGISTER_NEW_ACCOUNT": "Non ancora registarto? Registrati",
+  "REGISTER_NEW_ACCOUNT": "Non ancora registrato? Registrati",
 
   "REGISTER_USER_STRING": "Inserisci il tuo Username",
   "REGISTER_NAME_STRING": "Inserisci il tuo Nome",
